<resources>
    <string name="app_name">digital-asset-liquidation</string>
    <string name="token_id">DALs</string>

    <string name="title_permission">권한</string>
    <string name="description_permission">이 어플리케이션의 원활한 이용을 위하여 다음과 같은 권한이 필요합니다.</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">비밀번호</string>
    <string name="btn_login">로그인</string>
    <string name="btn_signup"><u>회원가입</u></string>

    <string name="btn_understood">확인</string>
    <string name="btn_register">매물 등록하기</string>
    <string name="btn_history">나의 매물 보기</string>
    <string name="btn_search">매물 검색</string>
    <string name="btn_buy">매물 구입하기</string>

    <string name="description_image_asset">매물 사진</string>
    <string name="title_image_asset_source">이미지 등록</string>

    <string name="detail_asset_name">자산명</string>
    <string name="detail_build_date">제작일자</string>
    <string name="detail_market_price">매매가</string>
    <string name="detail_on_chain">체인 등록</string>
    <string name="detail_owner">등록자</string>
    <string name="detail_post_time">등록일시</string>

    <string name="purchase_amount">구매량</string>

    <string name="numeric_zero">0</string>
</resources>
