<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/colorPrimaryLight"
    tools:context=".PurchaseActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/asset_name_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_asset_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_owner"/>

        <TextView
            android:id="@+id/tv_asset_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_asset_name_tag"
            android:layout_marginStart="10dp"
            tools:text="@string/app_name"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/price_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/asset_name_constraint_layout">

        <TextView
            android:id="@+id/tv_price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_market_price"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_price_tag"
            android:layout_marginStart="10dp"
            tools:text="10,000"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/amount_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price_constraint_layout">

        <TextView
            android:id="@+id/tv_amount_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/purchase_amount"/>

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_amount_tag"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:inputType="numberDecimal"
            tools:text="10"/>

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_purchase"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/colorAccentDark"
        android:text="@string/btn_buy"/>

</android.support.constraint.ConstraintLayout>